# DeepLearning

./: #cuMat.h#  .#cuMat.h  .gitignore  CMakeLists.txt  Makefile  cuMat.h  cuMatSparse.h  cuMatSparse.h~  example2.cpp~  function.cpp  function.cpp~  function.h  variable.cpp  variable.h  variable.h~
DNN/: function.cpp  function.h  variable.cpp  variable.h
DNN_noGPU/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  eigen-test.cc  function.cc  function.h  variable.c  variable.h  varible.cc
cuMat/: #mat_mul_elementwise_plus_kernel.cu#  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile~  README.md  add.cu  add.h  cmake_install.cmake  cuMat.h  cuMat.hpp  def.h  library_test.sh  library_test1.cpp  main.cc  mat_cos_kernel.cu  mat_cos_kernel.h  mat_div_kernel.cu  mat_div_kernel.h  mat_exp_kernel.cu  mat_exp_kernel.h  mat_inverse_d_kernel.cu  mat_inverse_d_kernel.h  mat_inverse_kernel.cu  mat_inverse_kernel.h  mat_l2_kernel.cu  mat_l2_kernel.h  mat_log_kernel.cu  mat_log_kernel.cu~  mat_log_kernel.h  mat_log_kernel.h~  mat_mod_kernel.cu  mat_mod_kernel.h  mat_mul_elementwise_kernel.cu  mat_mul_elementwise_kernel.h  mat_mul_elementwise_plus_kernel.h  mat_mul_plus_elementwise_kernel.cu  mat_mul_plus_elementwise_kernel.h  mat_ones_kernel.cu  (+36 more)
cuMat/html/: annotated.html  classMallocCounter-members.html  classMallocCounter.html  classcuMat-members.html  classcuMat.html  classes.html  cuMat_8h.html  cuMat_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  mat__cos__kernel_8h_source.html  mat__div__kernel_8h_source.html  mat__l2__kernel_8h_source.html  mat__log__kernel_8h_source.html  mat__mul__elementwise__kernel_8h_source.html  mat__mul__plus__elementwise__kernel_8h_source.html  mat__ones__kernel_8h_source.html  mat__sin__kernel_8h_source.html  mat__sqrt__d__kernel_8h_source.html  mat__sqrt__kernel_8h_source.html  matmod__kernel_8h_source.html  md_README.html  menudata.js  pages.html  prelu__d__kernel_8h_source.html  prelu__kernel_8h_source.html  relu__d__kernel_8h_source.html  relu__kernel_8h_source.html  sigmoid__d__kernel_8h_source.html  sigmoid__kernel_8h_source.html  slice__rows__kernel_8h_source.html  softmax__kernel_8h_source.html  tanh__d__kernel_8h_source.html  tanh__kernel_8h_source.html
cuMat/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  related_0.js  related_1.js  searchdata.js
cuMat/latex/: annotated.tex  classMallocCounter.tex  classcuMat.tex  cuMat_8h.tex  files.tex  md_README.tex  refman.tex
html/: md_README.html  pages.html
html/search/: pages_0.js
include/DeepLearning/cuMat/: cuMat.hpp  mat_div_kernel.h  mat_inverse_kernel.h  mat_l2_kernel.h  mat_mul_elementwise_kernel.h  mat_mul_plus_elementwise_kernel.h  mat_ones_kernel.h  mat_sqrt_kernel.h  prelu_kernel.h  tanh_d_kernel.h
latex/: refman.tex
lib/: CMakeLists.txt
lib/cuMat/: .gitignore  CMakeLists.txt  cuMat.hpp  cuMat_temp.hpp  mat_cos_kernel.cu  mat_div_kernel.cu  mat_exp_kernel.cu  mat_inverse_d_kernel.cu  mat_inverse_kernel.cu  mat_l2_kernel.cu  mat_log_kernel.cu  mat_mod_kernel.cu  mat_mul_elementwise_kernel.cu  mat_mul_elementwise_plus_kernel.cu  mat_mul_plus_elementwise_kernel.cu  mat_ones_kernel.cu  mat_sin_kernel.cu  mat_sqrt_d_kernel.cu  mat_sqrt_kernel.cu  prelu_d_kernel.cu  prelu_kernel.cu  relu_d_kernel.cu  relu_kernel.cu  sigmoid_d_kernel.cu  sigmoid_kernel.cu  slice_rows_kernel.cu  softmax_kernel.cu  tanh_d_kernel.cu  tanh_kernel.cu
lib/cuMat/include/: mat_cos_kernel.h  mat_exp_kernel.h  mat_inverse_d_kernel.h  mat_log_kernel.h  mat_mod_kernel.h  mat_mul_elementwise_plus_kernel.h  mat_sin_kernel.h  mat_sqrt_d_kernel.h  prelu_d_kernel.h  relu_d_kernel.h  relu_kernel.h  sigmoid_d_kernel.h  sigmoid_kernel.h  slice_rows_kernel.h  softmax_kernel.h  tanh_kernel.h
lib/cuMat/src/: mat_exp_kernel.cu  mat_log_kernel.cu  mat_mod_kernel.cu  mat_ones_kernel.cu  mat_sin_kernel.cu  mat_sqrt_d_kernel.cu  prelu_d_kernel.cu  prelu_kernel.cu  relu_d_kernel.cu  sigmoid_d_kernel.cu  slice_rows_kernel.cu
matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  compile_commands.json  eigen-test.cc  memo.txt
src/: test1.cpp  test2.cpp
